--- a/app/templates/cms/index.html
+++ b/app/templates/cms/index.html
@@ -350,16 +350,15 @@
     </footer>
     <div class="control-sidebar-bg"></div>
 </div>
-<script src="../static/admin/plugins/jQuery/jQuery-2.2.0.min.js"></script>
-<script src="../static/admin/bootstrap/js/bootstrap.min.js"></script>
-<script src="../static/admin/plugins/slimScroll/jquery.slimscroll.min.js"></script>
-<script src="../static/admin/plugins/fastclick/fastclick.js"></script>
-<script src="../static/admin/dist/js/app.min.js"></script>
-<script src="../static/admin/dist/js/demo.js"></script>
-<script src="//cdn.bootcss.com/holder/2.9.4/holder.min.js"></script>
-<script src="../static/admin/plugins/datepicker/bootstrap-datepicker.js"></script>
-<script src="../static/admin/plugins/datepicker/locales/bootstrap-datepicker.zh-CN.js" charset="UTF-8"></script>
-<script src="../static/js/echarts.min.js"></script>
+<script src="../../static/admin/plugins/jQuery/jQuery-2.2.0.min.js"></script>
+<script src="../../static/admin/bootstrap/js/bootstrap.min.js"></script>
+<script src="../../static/admin/plugins/slimScroll/jquery.slimscroll.min.js"></script>
+<script src="../../static/admin/plugins/fastclick/fastclick.js"></script>
+<script src="../../static/admin/dist/js/app.min.js"></script>
+<script src="../../static/admin/dist/js/demo.js"></script>
+<script src="../../static/admin/plugins/datepicker/bootstrap-datepicker.js"></script>
+<script src="../../static/admin/plugins/datepicker/locales/bootstrap-datepicker.zh-CN.js" charset="UTF-8"></script>
+<script src="../../static/js/echarts.min.js"></script>
 <script>
     var myChart = echarts.init(document.getElementById('meminfo'));
     option = {
