--- a/app/templates/cms/index.html
+++ b/app/templates/cms/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>微电影管理系统</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <link rel="shortcut icon" href="../static/base/images/logo.png">
-    <link rel="stylesheet" href="../static/admin/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../static/fonts/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../static/ionicons/css/ionicons.min.css">
-    <link rel="stylesheet" href="../static/admin/dist/css/AdminLTE.min.css">
-    <link rel="stylesheet" href="../static/admin/dist/css/skins/_all-skins.min.css">
-    <link rel="stylesheet" type="text/css" href="../static/admin/plugins/datepicker/datepicker3.css">
+<link rel="shortcut icon" href="../../static/png/logo.png">
+<link rel="stylesheet" href="../../static/css/bootstrap.min.css">
+<link rel="stylesheet" href="../../static/css/font-awesome.min.css">
+<link rel="stylesheet" href="../../static/css/ionicons.min.css">
+<link rel="stylesheet" href="../../static/css/AdminLTE.min.css">
+<link rel="stylesheet" href="../../static/css/_all-skins.min.css">
+<link rel="stylesheet" type="text/css" href="../../static/css/datepicker3.css">
     <style>
         *{
             font-family:"Microsoft YaHei";
@@ -23,8 +23,6 @@
 
     </style>
 </head>
-
-
 <body class="hold-transition skin-blue sidebar-mini">
 <div class="wrapper">
     <header class="main-header">
@@ -350,14 +348,15 @@
     </footer>
     <div class="control-sidebar-bg"></div>
 </div>
-<script src="../../static/admin/plugins/jQuery/jQuery-2.2.0.min.js"></script>
-<script src="../../static/admin/bootstrap/js/bootstrap.min.js"></script>
-<script src="../../static/admin/plugins/slimScroll/jquery.slimscroll.min.js"></script>
-<script src="../../static/admin/plugins/fastclick/fastclick.js"></script>
-<script src="../../static/admin/dist/js/app.min.js"></script>
-<script src="../../static/admin/dist/js/demo.js"></script>
-<script src="../../static/admin/plugins/datepicker/bootstrap-datepicker.js"></script>
-<script src="../../static/admin/plugins/datepicker/locales/bootstrap-datepicker.zh-CN.js" charset="UTF-8"></script>
+<script src="../../static/js/jQuery-2.2.0.min.js"></script>
+<script src="../../static/js/bootstrap.min.js"></script>
+<script src="../../static/js/jquery.slimscroll.min.js"></script>
+<script src="../../static/js/fastclick.js"></script>
+<script src="../../static/js/app.min.js"></script>
+<script src="../../static/js/demo.js"></script>
+<script src="../../static/js/holder.min.js"></script>
+<script src="../../static/js/bootstrap-datepicker.js"></script>
+<script src="../../static/js/bootstrap-datepicker.zh-CN.js" charset="UTF-8"></script>
 <script src="../../static/js/echarts.min.js"></script>
 <script>
     var myChart = echarts.init(document.getElementById('meminfo'));
