--- a/app/templates/server/comment.html
+++ b/app/templates/server/comment.html
@@ -3,170 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <style type="text/css">
-        * {margin: 0; padding: 0;}
-        #v-box{
-            position: fixed;
-            right: 0;
-            top: 0;
-            bottom: 0;
-            width: 0;
-            transition: width 1s;
-        }
-        .v-box-anim{
-            width: 550px !important;
-            transition: width 1s;
-        }
-        .v-left-anim{
-            width: calc(100% - 550px) !important;
-            transition: width 1s;
-        }
-        #v-right{
-            background-color: #333;
-            position: absolute;
-            height: 100%;
-            width: 550px;
-        }
-
-        #vr-base{
-            background-color: #baf;
-            height: 80px;
-        }
-
-        #vr-nav{
-            background-color: pink;
-            padding-left: 20px;
-            padding-right: 20px;
-            height: 65px;
-        }
-        #vr-nav ol{
-            -webkit-border-top-left-radius: 4px;
-            -moz-border-topleft-radius: 4px;
-            border-top-left-radius: 4px;
-            -webkit-border-top-right-radius: 4px;
-            -moz-border-topright-radius: 4px;
-            border-top-right-radius: 4px;
-            list-style: none;
-            list-style-image: none;
-            margin: 0 10px;
-            padding: 15px 0 15px 0;
-        }
-        #vr-nav li{
-            float: left;
-            list-style: none;
-            margin-right: 6px;
-            outline: none!important;
-        }
-
-        #vr-nav a{
-            border-radius: 3px;
-            color: #555;
-            display: block;
-            text-align: center;
-            padding: 10px 20px;
-            font-size: 16px;
-            font-weight: bold;
-            text-decoration: none;
-            line-height: 100%;
-        }
-
-        #forum-box, #note-box, #catalog{
-            height: 100%;
-            width: 100%;
-        }
-        #vr-foot{
-            background-color: #7ff;
-            height: 140px;
-        }
-        .first-wrapper{
-
-        }
-        .forum-list{
-            list-style: none;
-            padding: 0px 40px;
-            background-color: #afa;
-        }
-        .forum-list li{
-            position: relative;
-            margin: 0 -10px 5px;
-            border: 1px solid #b2b2b2;
-            border-radius: 13px;
-        }
-        .forumi{
-            background-color: #fff;
-            height: 100px;
-        }
-        .vrf-wrapper{
-            background-color: #7ff;
-            height: 140px;
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-        }
-
-        #show{
-            position: absolute;
-            right: 0;
-            top: 45%;
-            z-index: 1;
-            display: block;
-        }
-        #hide{
-            position: absolute;
-            left: 0;
-            top: 45%;
-            z-index: 1;
-        }
-        #hide span, #show span{
-            cursor: pointer;
-            background-color: #8af;
-            display: block;
-            width: 25px;
-            height: 65px;
-            line-height: 65px;
-            color: white;
-            text-align: center;
-            border-bottom-right-radius: 20px;
-            border-top-right-radius: 20px;
-            font-size: 22px;
-            transition: font-size, width .4s;
-        }
-        #show span{
-            border-bottom-left-radius: 20px;
-            border-top-left-radius: 20px;
-            border-bottom-right-radius: 0;
-            border-top-right-radius: 0;
-        }
-        #hide span:hover, #show span:hover{
-            width: 40px;
-            font-size: 22px;
-            transition: font-size, width .2s;
-        }
-        #vr-nav-mask {
-
-        }
-
-        #v-left{
-            position: absolute;
-            left: 0;
-            right:0;
-            width: 100%;
-            height: 100%;
-            background-color: #333;
-            transition: width 1s;
-        }
-
-        #comm-list a:hover{
-            background-color: #fff;
-        }
-        #vr-content{
-            height: calc(100% - 80px - 65px - 140px - 25px);
-            padding-top: 25px;
-            overflow-y: auto;
-            position: absolute;
-            width: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="../../static/css/comment.css">
 
 
 </head>
@@ -199,14 +36,14 @@
         <div id="vr-nav">
             <ol id="comm-list">
                 <li>
-                    <a id="forum-box">讨论</a></li>
+                    <a id="forum-a">讨论</a></li>
                 <li>
-                    <a id="note-box">笔记</a></li>
+                    <a id="note-a">笔记</a></li>
                 <li>
-                    <a href="#">收藏</a></li>
+                    <a id="coll-a">收藏</a></li>
 
                 <li style="position: absolute; right:50px;">
-                    <a id="id-3">目录</a></li>
+                    <a id="">目录</a></li>
             </ol>
         </div>
         <div id="forum-box" style="display: none;">
@@ -229,9 +66,15 @@
 
         <div id="note-box" style="height: 100%;">
             <div id="vr-content" style="height: calc(100% - 80px - 65px); background: #69c;">
+                <h1>笔记</h1>
             </div>
         </div>
 
+        <div id="coll-box" style="height: 100%;">
+            <div id="vr-content" style="height: calc(100% - 80px - 65px); background: #f9c;">
+                <h1>收藏</h1>
+            </div>
+        </div>
     </div>
 </div>
 </body>
@@ -248,118 +91,9 @@
         </div>
     </li>
 </script>
-<script type="text/javascript">
-    // 设置拉取的位置，第一次为1
-    let counter = 1;
-    // 每次拉取的讨论条数
-    const quantity = 8;
 
 
-    // 评论发送
-    document.querySelector('#send-forum').disabled = true;
-    document.querySelector('#text').onkeyup = () => {
-        if (document.querySelector('#text').value.length > 0){
-            document.querySelector('#send-forum').disabled = false;
-        }else{
-            document.querySelector('#send-forum').disabled = true;
-        }
-    };
-    document.querySelector('#forum-form').onsubmit = () =>{
-        const request = new XMLHttpRequest();
-        request.open("POST", "/forum");
-
-        request.onload = () => {
-            const data = JSON.parse(request.responseText);
-            data.forEach(add_comment);
-            document.querySelector('#text').value = ""
-            document.querySelector('#send-forum').disabled = true;
-        };
-
-        const data = new FormData();
-        data.append('content', document.querySelector("#text").value)
-        request.send(data);
-
-        return false;
-    };
-    function add_comment(contents){
-        const comm = comm_template({'contents': contents});
-        document.querySelector('.forum-list').innerHTML = comm + document.querySelector('.forum-list').innerHTML;
-    }
-
-    // 评论列表滚动事件
-    document.getElementById('vr-content').onscroll = () => {
-        if (document.querySelector("#vr-content").offsetHeight + document.querySelector("#vr-content").scrollTop >= document.querySelector("#vr-content").scrollHeight){
-            load();
-        };
-    }
-    // 当 DOM 加载完成后，进行第一次拉取
-    document.addEventListener('DOMContentLoaded', load);
-    function load(){
-        // 设置拉取记录所在区间
-        const start = counter;
-        const end = start + quantity - 1;
-        counter = end + 1;
-
-        // 获取记录
-        const request = new XMLHttpRequest();
-        request.open("POST", "/nextComments");
-
-        request.onload = () => {
-            const data = JSON.parse(request.responseText);
-            data.forEach(history_comment);
-        };
-        // 将拉取记录的起始和结束位置 作为请求的参数发送给服务器
-        const data = new FormData();
-        data.append('start', start);
-        data.append('end', end);
-
-        // 发送请求
-        request.send(data);
-    };
-
-    // 通过Handlebars模板添加讨论记录到DOM
-    const comm_template = Handlebars.compile(document.querySelector('#comment').innerHTML);
-    function history_comment(contents){
-        // 创建新的讨论
-        const comm = comm_template({'contents': contents});
-        document.querySelector('.forum-list').innerHTML += comm;
-    };
-
-
-
-    // 隐藏右侧面板
-    document.querySelector('#hide').onclick = () =>{
-        document.querySelector('#v-left').className = "";
-        document.querySelector('#v-box').className = "";
-        document.querySelector('#show').style.display = "block";
-        document.querySelector('#hide').style.display = "none";
-    };
-    document.querySelector('#show').onclick = () =>{
-        document.querySelector('#v-left').className = "v-left-anim";
-        document.querySelector('#v-box').className = "v-box-anim";
-        document.querySelector('#hide').style.display = "block";
-        document.querySelector('#show').style.display = "none";
-    };
-
-
-    // 导航航切换
-    document.querySelectotAll('#id-*') = (x) => {
-        x.forEach(
-            xa => {
-                panle = this.value;
-                document.querySelector(panle).display = "none";
-                xa.onclick = ()=>{
-                    document.querySelector(panle).display = "block";
-                };
-            };
-        );
-    };
-
-</script>
-
-<script type="text/javascript">
-
-</script>
+<script type="text/javascript" src="../../static/js/comment.js"></script>
 
 
 </html>
