--- a/main/templates/server/index.html
+++ b/main/templates/server/index.html
@@ -2,7 +2,7 @@
 {% block title %}login pages{% endblock %}
 {% block head %}
     {{ super() }}
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='server/css/login.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/login.css') }}">
 {% endblock %}
 {% block content %}
 
