--- a/main/templates/cms/admin.html
+++ b/main/templates/cms/admin.html
@@ -5,32 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>千禧微课管理系统</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <link rel="shortcut icon" href="{{url_for('static',filename='png/logo.png')}}">
-   <!--  <link rel="stylesheet" href="../static/admin/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../static/fonts/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../static/ionicons/css/ionicons.min.css">
-    <link rel="stylesheet" href="../static/admin/dist/css/AdminLTE.min.css">
-    <link rel="stylesheet" href="../static/admin/dist/css/skins/_all-skins.min.css">
-    <link rel="stylesheet" type="text/css" href="../static/admin/plugins/datepicker/datepicker3.css"> -->
-        <link rel="shortcut icon" href="{{url_for('static',filename='png/logo.png')}}">
-    <link rel="stylesheet" href="{{url_for('static',filename='css/bootstrap.min.css')}}">
-    <link rel="stylesheet" href="{{url_for('static',filename='css/font-awesome.min.css')}}">
-    <link rel="stylesheet" href="{{url_for('static',filename='css/ionicons.min.css')}}">
-    <link rel="stylesheet" href="{{url_for('static',filename='css/AdminLTE.min.css')}}">
-    <link rel="stylesheet" href="{{url_for('static',filename='css/_all-skins.min.css')}}"
-
-
+<!--     <link rel="shortcut icon" href="{{url_for('static',filename='/logo.png')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='/bootstrap.min.css'')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='/font-awesome.min.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='/ionicons.min.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='/AdminLTE.min.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='/skins/_all-skins.min.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='/static/datepicker3.css')}}"> -->
+    <style>
+        *{
+            font-family:"Microsoft YaHei";
+        }
+        .table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th{
+            vertical-align:middle;
+            text-align:center;
+        }
+    </style>
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
 <div class="wrapper">
     <header class="main-header">
-        <a onclick="reurl('index')" class="logo">
-            <span class="logo-mini"><img src="{{url_for('static',filename='png/logo.png')}}"
-                                         style="height:40px;width:40px;">千禧微课系统</span>
-            <span class="logo-lg"><img src="{{url_for('static',filename='png/logo.png')}}"
-                                       style="height:40px;width:40px;">千禧微课管理系统</span>
+        <a href="index.html" class="logo">
+         <!--    <span class="logo-mini"><img src="{{url_for('static',filename='/static/logo.png')}}" style="height:40px;width:40px;">微课系统</span>
+            <span class="logo-lg"><img src="{{url_for('static',filename='/static/logo.png')}}" style="height:40px;width:40px;">微课管理系统</span>-->
         </a>
-        <nav class="navbar navbar-static-top">
+        <nav class="navbar navbar-static-top"> 
             <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
                 <span class="sr-only">下拉菜单</span>
             </a>
@@ -38,23 +37,25 @@
                 <ul class="nav navbar-nav">
                     <li class="dropdown user user-menu">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <img src="{{url_for('static',filename=user.picture)}}"class="user-image" alt="User Image">
-                            <span class="hidden-xs">{{user.name}}</span>
+                            <img src="../static/admin/dist/img/user2-160x160.jpg"
+                                 class="user-image" alt="User Image">
+                            <span class="hidden-xs">xxx</span>
                         </a>
                         <ul class="dropdown-menu">
                             <li class="user-header">
-                                <img src="{{url_for('static',filename=user.picture)}}"class="img-circle" alt="User Image">
+                                <img src="../static/admin/dist/img/user2-160x160.jpg"
+                                     class="img-circle" alt="User Image">
                                 <p>
-                                    {{username}}
+                                    xxx
                                     <small>2017-06-01</small>
                                 </p>
                             </li>
                             <li class="user-footer">
                                 <div class="pull-left">
-                                    <a onclick="reurl('pwd')" class="btn btn-default btn-flat">修改密码</a>
+                                    <a href="pwd.html" class="btn btn-default btn-flat">修改密码</a>
                                 </div>
                                 <div class="pull-right">
-                                    <a onclick="reurl('login')" class="btn btn-default btn-flat">退出系统</a>
+                                    <a href="login.html" class="btn btn-default btn-flat">退出系统</a>
                                 </div>
                             </li>
                         </ul>
@@ -67,12 +68,12 @@
         <section class="sidebar">
             <div class="user-panel">
                 <div class="pull-left image">
-                    <img src="{{url_for('static',filename=user.picture)}}" class="img-circle"
+                    <img src="../static/admin/dist/img/user2-160x160.jpg" class="img-circle"
                          alt="User Image">
                 </div>
                 <div class="pull-left info">
-                    <p>{{username}}</p>
-                    <a href="#"><i class="fa fa-circle text-success"></i> {{user}}在线</a>
+                    <p>用户xxx</p>
+                    <a href="#"><i class="fa fa-circle text-success"></i> 在线</a>
                 </div>
             </div>
             <form action="#" method="get" class="sidebar-form">
@@ -95,27 +96,27 @@
                     </a>
                     <ul class="treeview-menu">
                         <li>
-                            <a onclick="reurl('home')">
+                            <a href="index.html">
                                 <i class="fa fa-circle-o"></i> 控制面板
                             </a>
                         </li>
                     </ul>
                 </li>
-                
+               
                 <li class="treeview">
                     <a href="#">
                         <i class="fa fa-file-video-o" aria-hidden="true"></i>
-                        <span>微课管理</span>
+                        <span>课程管理</span>
                         <span class="label label-primary pull-right">2</span>
                     </a>
                     <ul class="treeview-menu">
                         <li>
-                            <a onclick="reurl('course_add')">
+                            <a href="movie_add.html">
                                 <i class="fa fa-circle-o"></i> 添加课程
                             </a>
                         </li>
                         <li>
-                            <a onclick="course_list('course_list')">
+                            <a href="movie_list.html">
                                 <i class="fa fa-circle-o"></i> 课程列表
                             </a>
                         </li>
@@ -130,7 +131,7 @@
                     </a>
                     <ul class="treeview-menu">
                         <li>
-                            <a onclick="user_list('user_list')">
+                            <a href="user_list.html">
                                 <i class="fa fa-circle-o"></i> 会员列表
                             </a>
                         </li>
@@ -144,7 +145,7 @@
                     </a>
                     <ul class="treeview-menu">
                         <li>
-                            <a onclick="comment_list('comment_list')">
+                            <a href="comment_list.html">
                                 <i class="fa fa-circle-o"></i> 评论列表
                             </a>
                         </li>
@@ -158,7 +159,7 @@
                     </a>
                     <ul class="treeview-menu">
                         <li>
-                            <a onclick="reurl('moviecol_list')">
+                            <a href="moviecol_list.html">
                                 <i class="fa fa-circle-o"></i> 收藏列表
                             </a>
                         </li>
@@ -172,17 +173,17 @@
                     </a>
                     <ul class="treeview-menu">
                         <li>
-                            <a onclick="reurl('oplog_list')">
+                            <a href="oplog_list.html">
                                 <i class="fa fa-circle-o"></i> 操作日志列表
                             </a>
                         </li>
                         <li>
-                            <a onclick="reurl('adminloginlog_list')">
+                            <a href="adminloginlog_list.html">
                                 <i class="fa fa-circle-o"></i> 管理员登录日志列表
                             </a>
                         </li>
                         <li>
-                            <a onclick="reurl('userloginlog_list')">
+                            <a href="userloginlog_list.html">
                                 <i class="fa fa-circle-o"></i> 会员登录日志列表
                             </a>
                         </li>
@@ -196,12 +197,12 @@
                     </a>
                     <ul class="treeview-menu">
                         <li>
-                            <a onclick="reurl('auth_add')">
+                            <a href="auth_add.html">
                                 <i class="fa fa-circle-o"></i> 添加权限
                             </a>
                         </li>
                         <li>
-                            <a onclick="reurl('auth_list')">
+                            <a href="auth_list.html">
                                 <i class="fa fa-circle-o"></i> 权限列表
                             </a>
                         </li>
@@ -216,12 +217,12 @@
                     </a>
                     <ul class="treeview-menu">
                         <li>
-                            <a onclick="reurl('admin_add')">
+                            <a href="admin_add.html">
                                 <i class="fa fa-circle-o"></i> 添加管理员
                             </a>
                         </li>
                         <li>
-                            <a onclick="reurl('admin_list')">
+                            <a href="admin_list.html">
                                 <i class="fa fa-circle-o"></i> 管理员列表
                             </a>
                         </li>
@@ -231,7 +232,8 @@
         </section>
     </aside>
     <div class="content-wrapper">
-
+    <!--内容-->
+    <!--内容-->
     </div>
     <footer class="main-footer">
         <div class="pull-right hidden-xs">
@@ -241,155 +243,16 @@
     </footer>
     <div class="control-sidebar-bg"></div>
 </div>
-<script src="{{url_for('static',filename='js/jQuery-2.2.0.min.js')}}"></script>
-<script src="{{url_for('static',filename='js/bootstrap.min.js')}}"></script>
-<script src="{{url_for('static',filename='js/jquery.slimscroll.min.js')}}"></script>
-<script src="{{url_for('static',filename='js/fastclick.js')}}"></script>
-<script src="{{url_for('static',filename='js/app.min.js')}}"></script>
-<script src="{{url_for('static',filename='js/demo.js')}}"></script>
-<script src="{{url_for('static',filename='js/holder.min.js')}}"></script>
-<script src="{{url_for('static',filename='js/bootstrap-datepicker.js')}}"></script>
-<script src="{{url_for('static',filename='js/bootstrap-datepicker.zh-CN.js')}}" charset="UTF-8"></script>
-<script src="{{url_for('static',filename='js/echarts.min.js')}}"></script>
-<script>
-    var myChart = echarts.init(document.getElementById('meminfo'));
-    option = {
-		backgroundColor: "white",
-		tooltip: {
-			formatter: "{a} <br/>{b} : {c}%"
-		},
-		toolbox: {
-			feature: {
-				restore: {},
-				saveAsImage: {}
-			}
-		},
-		series: [{
-			name: '内存使用率',
-			type: 'gauge',
-			detail: {
-				formatter: '{value}%'
-			},
-			data: [{
-				value: 50,
-				name: '内存使用率'
-			}]
-		}]
-	};
-    setInterval(function () {
-        option.series[0].data[0].value = (Math.random() * 100).toFixed(2) - 0;
-        myChart.setOption(option, true);
-    },2000);
-
-</script>
+<script src="../static/admin/plugins/jQuery/jQuery-2.2.0.min.js"></script>
+<script src="../static/admin/bootstrap/js/bootstrap.min.js"></script>
+<script src="../static/admin/plugins/slimScroll/jquery.slimscroll.min.js"></script>
+<script src="../static/admin/plugins/fastclick/fastclick.js"></script>
+<script src="../static/admin/dist/js/app.min.js"></script>
+<script src="../static/admin/dist/js/demo.js"></script>
+<script src="//cdn.bootcss.com/holder/2.9.4/holder.min.js"></script>
+<script src="../static/admin/plugins/datepicker/bootstrap-datepicker.js"></script>
+<script src="../static/admin/plugins/datepicker/locales/bootstrap-datepicker.zh-CN.js" charset="UTF-8"></script>
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
-<script id="comment" type="text/x-handlebars-template">
-    <li>
-        <div class="forumi">
-            <h1 style="text-align: center;">
-                {% raw -%}
-                    {{contents}}
-                {%- endraw %}
-            </h1>
-        </div>
-    </li>
-</script>
-
-<script type="text/javascript">
-
-    
-    function changeHtml(htm){
-        document.querySelector('.content-wrapper').innerHTML = htm;
-    };
-
-
-    function reurl(url){
-        const request = new XMLHttpRequest()
-        request.open("POST", "/admin/reurl")
-
-        request.onload = () => {
-            const data = request.responseText;
-            console.log(data);
-            changeHtml(data);
-        };
-
-        const data = new FormData();
-        data.append('page', url);
-
-        request.send(data);
-        return false;
-    
-    };
-
-    function courselist(contents){
-        const comm = comm_template({'contents': contents});
-        document.querySelector('.forum-list').innerHTML = comm + document.querySelector('.forum-list').innerHTML;
-    }
-
-
-    function course_list(url){
-        const request = new XMLHttpRequest()
-        request.open("GET", "/admin/course_list")
-
-        request.onload = () => {
-            const data = request.responseText;
-            console.log(data);
-            changeHtml(data);
-        };
-
-        const data = new FormData();
-        data.append('page', url);
-
-        request.send(data);
-        return false;
-    
-    };
-
-
-
-
-
-
-
-    function user_list(url){
-        const request = new XMLHttpRequest()
-        request.open("GET", "/admin/user_list")
-
-        request.onload = () => {
-            const data = request.responseText;
-            console.log(data);
-            changeHtml(data);
-        };
-
-        const data = new FormData();
-        data.append('page', url);
-
-        request.send(data);
-        return false;
-    
-    }; 
-
-
-    function comment_list(url){
-        const request = new XMLHttpRequest()
-        request.open("GET", "/admin/comment_list")
-
-        request.onload = () => {
-            const data = request.responseText;
-            console.log(data);
-            changeHtml(data);
-        };
-
-        const data = new FormData();
-        data.append('page', url);
-
-        request.send(data);
-        return false;
-    
-    };   
-
-</script>
 </body>
 </html>
