--- a/main/templates/cms/admin_add.html
+++ b/main/templates/cms/admin_add.html
@@ -25,17 +25,18 @@
                                 <input type="password" class="form-control" id="input_pwd" placeholder="请输入管理员密码！">
                             </div>
                             <div class="form-group">
-                                <label for="input_re_pwd">管理员重复密码</label>
+                                <label for="input_re_pwd">添加时间</label>
                                 <input type="password" class="form-control" id="input_re_pwd"
-                                       placeholder="请输入管理员重复密码！">
+                                       placeholder="请输入管理员添加时间！">
                             </div>
-                            <div class="form-group">
+                            
+                            <!-- <div class="form-group">
                                 <label for="input_role_id">所属角色</label>
                                 <select class="form-control" id="input_role_id">
                                     <option value="0">---请选择所属角色---</option>
                                     <option value="1">xxx</option>
                                 </select>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="box-footer">
                             <button type="submit" class="btn btn-primary">添加</button>
