--- a/main/templates/cms/comment_list.html
+++ b/main/templates/cms/comment_list.html
@@ -49,7 +49,7 @@
                                     </span>
                                     
                                     {{comm.comment}}
-                                    <br><a class="label label-danger pull-right">删除</a>
+                                    <br><button class="removeComment" data-codid="{{comment.id}}">删除</button>
                                 </div>
                             </div>
                             {% endfor %}
