--- a/main/templates/cms/course_list.html
+++ b/main/templates/cms/course_list.html
@@ -42,7 +42,7 @@
 
                                 </tr>
                                 {% for cou in rel %}
-                                <tr id="cou.id">
+                                <tr id="{{cou.id}}">
 
                                     <td>{{cou.id}}</td>
                                     <td>{{cou.lecturer}}</td>
