--- a/main/templates/cms/index.html
+++ b/main/templates/cms/index.html
@@ -257,6 +257,8 @@
 
 
 <script src="{{url_for('static',filename='js/course_opeator.js')}}"></script>
+<script src="{{url_for('static',filename='js/user_operate.js')}}"></script>
+<script src="{{url_for('static',filename='js/comment_operate.js')}}"></script>
 <script src="{{url_for('static',filename='js/jQuery-2.2.0.min.js')}}"></script>
 <script src="{{url_for('static',filename='js/bootstrap.min.js')}}"></script>
 <script src="{{url_for('static',filename='js/jquery.slimscroll.min.js')}}"></script>
@@ -267,7 +269,6 @@
 <script src="{{url_for('static',filename='js/bootstrap-datepicker.js')}}"></script>
 <script src="{{url_for('static',filename='js/bootstrap-datepicker.zh-CN.js')}}" charset="UTF-8"></script>
 <script src="{{url_for('static',filename='js/echarts.min.js')}}"></script>
-
 <script src="{{url_for('static',filename='js/cmsbase.js')}}"></script>
 </body>
 </html>
