--- a/main/templates/cms/user_list.html
+++ b/main/templates/cms/user_list.html
@@ -27,7 +27,7 @@
                         <div class="box-body table-responsive no-padding">
                             <table class="table table-hover">
                                 <tbody>
-                                <tr>
+                                <tr >
                                     <th>编号</th>
                                     <th>昵称</th>
                                     <th>性别</th>
@@ -39,7 +39,7 @@
                                     <th>操作事项</th>
                                 </tr>
                                 {% for user in userl%}
-                                <tr>
+                                <tr id="{{user.id}}">
                                     <td>{{user.id}}</td>
                                     <td>{{user.name}}</td>
                                     <td>{{user.sex}}</td>
@@ -53,10 +53,10 @@
                                     
                                     
                                     <td>
-                                        <a class="label label-success" href="user_view.html">查看</a>
+                                        <button class="viewUser" data-uvid="{{user.id}}">查看</button>
                                         &nbsp;
                             
-                                        <a class="label label-danger">删除</a>
+                                        <button class="removeUser" data-udid="{{user.id}}" >删除</button>
                                     </td>
                                 </tr>
                                 {% endfor %}
