--- a/main/templates/server/comment.html
+++ b/main/templates/server/comment.html
@@ -38,12 +38,11 @@
           <div id="hide">
               <span style="">&gt;</span>
           </div>
-          <div id="vr-base">
+          <div id="vr-base" data-vid="{{course.id}}">
               <div style="width: 60%; float: left; height: 100%;">
-                <h3 style="text-align: center; height: 40px; line-height: 40px;">{{course.course}}</h3>
-                <h3 style="text-align: center; height: 40px; line-height: 40px;">{{course.lecturer}}</h3>
+                <h3 style="text-align: center; height: 40px; line-height: 40px;">{{course.name}}</h3>
+                <h3 style="text-align: center; height: 40px; line-height: 40px;">{{course.teacher}}</h3>
               </div>
-
               <img style="height: 100%; max-width: 40%; float: right;" src="{{course.cover}}"></img>
           </div>
 
