--- a/main/templates/server/forum.html
+++ b/main/templates/server/forum.html
@@ -3,9 +3,9 @@
 <li>
     <div class="forumi">
           <div style="height: 40px; width: 100%; background: #f1f1f1;">
-            <img class="img" src="{{f.picture}}"></img>
+            <img class="img" src="{{f.profile}}"></img>
             <a styple="width: 80px;">{{f.name}}</a>
-            <span style="font-size: 14px; padding-left: 20px;">{{v.time}}</span>
+            <span style="font-size: 14px; padding-left: 20px;">{{v.date}}</span>
           </div>
           <p style="text-indent: 2em; margin: 5px;">{{v.comment}}</p>
     </div>
