--- a/main/static/css/comment.css
+++ b/main/static/css/comment.css
@@ -18,7 +18,7 @@
 }
 #v-right{
     position: absolute;
-    height: calc(100% - 60px);
+    height: 100%;
     width: 550px;
 }
 
@@ -154,7 +154,7 @@
     background-color: #fff;
 }
 #vr-content{
-    height: calc(100% - 80px - 65px - 140px - 25px - 60px);
+    height: calc(100% - 80px - 65px - 140px - 25px);
     padding-top: 25px;
     overflow-y: auto;
     background: #777;
